ns-pod-np/pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: jay-ns
  labels:
    app: nginx-pod
spec:
  containers:
    - image: nginx
      name: nginx-image
      ports:
        - containerPort: 80
